src/objects/Subscription__c.object
<CustomObject>
    <fields>
        <fullName>Retailer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Retailer</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND (2 OR 3)</booleanFilter>
            <errorMessage>Please select a retailer that has not closed.</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Retailer Account</value>
            </filterItems>
            <filterItems>
                <field>Account.Closed__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>System Administrator, TMG System</value>
            </filterItems>
            <infoMessage>Closed retailers are still valid accounts for System Administrator and TMG System profiles.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Revenue_Write_off_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Amount of revenue write-off - any balance due from customer</inlineHelpText>
        <label>Revenue Write-off Amount</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revenue_Write_off_Reason__c</fullName>
        <inlineHelpText>Reason for any revenue write-off</inlineHelpText>
        <label>Revenue Write-off Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                <fullName>Call Centre error</fullName>
                </value>
                <value>
                <fullName>Customer appeasement</fullName>
                </value>
                <value>
                <fullName>DD error</fullName>
                </value>
                <value>
                <fullName>Deceased</fullName>
                </value>
                <value>
                <fullName>No response to phone calls/letters</fullName>
                </value>
                <value>
                <fullName>Not prepared to pay/return vouchers</fullName>
                </value>
                <value>
                <fullName>TMG error</fullName>
                </value>
                <value>
                <fullName>Amount not owed by customer</fullName>
                </value>
                <value>
                <fullName>Oustanding Balance showed in error</fullName>
                </value>
                <value>
                <fullName>Gone Away</fullName>
                </value>
                <value>
                <fullName>Monthly Payment Calculation Discrepancy</fullName>
                </value>
                <value>
                <fullName>Refund Calculation Error</fullName>
                </value>
                <value>
                <fullName>Salesforce Calculation Error</fullName>
                </value>
                <value>
                <fullName>Insufficient vouchers returned</fullName>
                </value>
                <value>
                <fullName>Too many vouchers returned</fullName>
                </value>
                <value>
                <fullName>Cancellation No Refund</fullName>
                </value>
                <value>
                <fullName>Additional Payment</fullName>
                </value>
                <value>
                <fullName>Additional DD Payments Taken</fullName>
                </value>
                <value>
                <fullName>Undated Vouchers Purchased</fullName>
                </value>
                <value>
                <fullName>Auto write-off</fullName>
                </value>
                <value>
                <fullName>Final DD Collection Not Taken</fullName>
                </value>
                <value>
                <fullName>Mailing Error</fullName>
                </value>
                <value>
                <fullName>Newsagent Cheque Received</fullName>
                </value>
                <value>
                <fullName>Retention</fullName>
                </value>
                <value>
                <fullName>QA Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Send_Loyalty__c</fullName>
        <label>Send Loyalty</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                <fullName>Yes</fullName>
                <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StaffOfferRecipient__c</fullName>
        <description>Staff member who introduced Telegraph to a friend. Will receive an incentive.</description>
        <label>Staff Offer Recipient</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date_Hidden__c</fullName>
        <formula>TEXT(Start_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start_Date_Hidden</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date_Weekday__c</fullName>
        <formula>Case(

MOD(  Start_Date__c - DATE(2000, 1, 2), 7),

0, &quot;SUNDAY&quot;,

1, &quot;MONDAY&quot;,

2, &quot;TUESDAY&quot;,

3, &quot;WEDNESDAY&quot;,

4, &quot;THURSDAY&quot;,

5, &quot;FRIDAY&quot;,

6, &quot;SATURDAY&quot;, &quot;ERROR&quot;)</formula>
        <label>Start Date Weekday</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_Indicator__c</fullName>
        <formula>IMAGE( 
CASE(  Subscription_Status__c , 
&quot;Active&quot;, &quot;/img/samples/light_green.gif&quot;,
&quot;In Renewal&quot;, &quot;/img/samples/light_yellow.gif&quot;,
&quot;Offered&quot;, &quot;/img/samples/light_yellow.gif&quot;,
&quot;Pending&quot;, &quot;/img/samples/light_yellow.gif&quot;,
&quot;Red&quot;, &quot;/img/samples/light_red.gif&quot;, 
&quot;/img/samples/light_red.gif&quot;), 
&quot;Status&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Status_Not_Started_Text_Hidden__c</fullName>
        <description>If sub is Offered/Pending/Withdrawn/Declined then this value is &apos;Not Active&apos; else &apos;Active&apos; - to overcome 5000 char formula limitation for current week position</description>
        <label>Sub Status Not Started Text (Hidden)</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscriber__c</fullName>
        <label>Subscriber</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SubscriberHasEmail__c</fullName>
        <formula>IF ( Subscriber__r.PersonEmail != null , TRUE, FALSE )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subscriber Has Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subscription_Duration_Number_Override__c</fullName>
        <label>Subscription Duration (Weeks) Override</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subscription_Duration_Number__c</fullName>
        <formula>IF(Subscription_Duration_Number_Override__c = 0, CASE(Subscription_Duration_Picklist__c, &quot;6&quot;, 6, &quot;10&quot;, 10, &quot;12&quot;, 12, &quot;13&quot;, 13, &quot;24&quot;, 24, &quot;26&quot;, 26, &quot;36&quot;, 36, &quot;39&quot;, 39, &quot;40&quot;, 40, &quot;44&quot;, 44, &quot;48&quot;, 48, &quot;52&quot;, 52, &quot;96&quot;, 96, &quot;156&quot;, 156, 0), Subscription_Duration_Number_Override__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subscription Duration (Weeks) - Hidden</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subscription_Duration_Picklist__c</fullName>
        <label>Subscription Duration (Weeks)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                <fullName>26</fullName>
                </value>
                <value>
                <fullName>52</fullName>
                <default>true</default>
                    <label>52</label>
                </value>
                <value>
                <fullName>13</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
	<fields>
        <fullName>Subscription_Product__c</fullName>
        <formula>IF(OR(RecordType.Name=&apos;Schools&apos;, RecordType.Name=&apos;School&apos;), &apos;Schools&apos;,IF(AND(TEXT(Gift_Pack_Book__c)!=&apos;&apos;,TEXT(Gift_Box_Recipient__c)!=&apos;&apos;,NOT(ISBLANK(Gift_Donor__c))),&apos;7 Day - Gift&apos;, IF(Product__r.Name == null, &apos;7 Day - Standard&apos;, Product__r.Name)))</formula>
        <label>Subscription Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Start_Calc__c</fullName>
        <formula>IF(LEN( Previous_Subscription__c)=0,
  IF(MOD(Today() - DATE(1900, 1, 7), 7) = 1, Today() + VALUE(Product__r.LeadDays__c) + 5, 
    IF(MOD(Today() - DATE(1900, 1, 7), 7) = 2, Today() + VALUE(Product__r.LeadDays__c) + 4, 
      IF(MOD(Today() - DATE(1900, 1, 7), 7) = 3, Today() + VALUE(Product__r.LeadDays__c) + 3, 
        IF(MOD(Today() - DATE(1900, 1, 7), 7) = 4, Today() + VALUE(Product__r.LeadDays__c) + 2, 
          IF(MOD(Today() - DATE(1900, 1, 7), 7) = 5, Today() + VALUE(Product__r.LeadDays__c) +1, 
            IF(MOD(Today() - DATE(1900, 1, 7), 7) = 6, Today() + VALUE(Product__r.LeadDays__c), 
        Today() + VALUE(Product__r.LeadDays__c) + 6)))))),
        
  IF(MOD(Today() - DATE(1900, 1, 7), 7) = 1, Today() + VALUE(Product__r.LeadDays__c)+ 19, 
    IF(MOD(Today() - DATE(1900, 1, 7), 7) = 2, Today() + VALUE(Product__r.LeadDays__c) + 18, 
      IF(MOD(Today() - DATE(1900, 1, 7), 7) = 3, Today() + VALUE(Product__r.LeadDays__c) + 17, 
        IF(MOD(Today() - DATE(1900, 1, 7), 7) = 4, Today() + VALUE(Product__r.LeadDays__c) + 16, 
          IF(MOD(Today() - DATE(1900, 1, 7), 7) = 5, Today() + VALUE(Product__r.LeadDays__c) + 15, 
            IF(MOD(Today() - DATE(1900, 1, 7), 7) = 6, Today() + VALUE(Product__r.LeadDays__c) + 14, 
  Today() + VALUE(Product__r.LeadDays__c) + 13)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Earliest Subscription Start Calc</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subscription_Status__c</fullName>
        <label>Subscription Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                <fullName>Active</fullName>
                </value>
                <value>
                <fullName>In Renewal</fullName>
                </value>
                <value>
                <fullName>Offered</fullName>
                <default>true</default>
                    <label>Offered</label>
                </value>
                <value>
                <fullName>Pending</fullName>
                </value>
                <value>
                <fullName>Withdrawn</fullName>
                </value>
                <value>
                <fullName>Declined</fullName>
                </value>
                <value>
                <fullName>Lapsed</fullName>
                </value>
                <value>
                <fullName>Pending Cancellation</fullName>
                </value>
                <value>
                <fullName>Cancelled</fullName>
                </value>
                <value>
                <fullName>Temporary Suspension</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SumOfVoucherReceivedRefundDue__c</fullName>
        <label>Sum Of Voucher Received Refund Due</label>
        <summarizedField>Voucher_Adjustment__c.Voucher_Value_Calc__c</summarizedField>
        <summaryFilterItems>
            <field>Voucher_Adjustment__c.Voucher_Activity_Action__c</field>
            <operation>equals</operation>
            <value>Vouchers Received</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Voucher_Adjustment__c.Refund_Due__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Voucher_Adjustment__c.Subscription__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sum_of_Payments__c</fullName>
        <inlineHelpText>Net sum of all successful payments for this subscription (less any refunds)</inlineHelpText>
        <label>Sum of Payments in Salesforce</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sum_of_Processed_Holiday_Return_Vouchers__c</fullName>
        <description>Sum of received holiday return vouchers with successfully processed refund</description>
        <inlineHelpText>Sum of received holiday return vouchers with successfully processed refund</inlineHelpText>
        <label>Sum of Processed Holiday Return Vouchers</label>
        <summarizedField>Voucher_Adjustment__c.Voucher_Value_Calc__c</summarizedField>
        <summaryFilterItems>
            <field>Voucher_Adjustment__c.Refund_Status__c</field>
            <operation>equals</operation>
            <value>Processed</value>
        </summaryFilterItems>
        <summaryForeignKey>Voucher_Adjustment__c.Subscription__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Synthesis_Id__c</fullName>
        <label>Synthesis Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Synthesis_Key__c</fullName>
        <externalId>true</externalId>
        <label>Synthesis Key</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TCode_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TCode Product</label>
        <referenceTo>TCode_Product__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reltionship to the Tcode object</description>
        <label>TCodeManagement</label>
        <referenceTo>TCodeManagement__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TDT__c</fullName>
        <formula>Subscriber__r.TDT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TDT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tablet_Last_Accessed__c</fullName>
        <label>Tablet Last Accessed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TaskCreation__c</fullName>
        <label>TaskCreation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                <fullName>Cashposting</fullName>
                </value>
                <value>
                <fullName>Call</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_DD_Payment__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Gross Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Holiday_Return_Period_Weeks__c</fullName>
        <label>Total Holiday Return Period (Weeks)</label>
        <summarizedField>Voucher_Adjustment__c.Voucher_Validity_in_Weeks__c</summarizedField>
        <summaryFilterItems>
            <field>Voucher_Adjustment__c.Adjustment_Type__c</field>
            <operation>equals</operation>
            <value>Holiday Return</value>
        </summaryFilterItems>
        <summaryForeignKey>Voucher_Adjustment__c.Subscription__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <description>Total price for the subscription.</description>
        <formula>IF(
   Subscription_Duration_Number__c == 13, 
   IF(
      TCode_Product__r.X13_Week_Price__c == 0, 
      Weekly_Price__c * 13,
      TCode_Product__r.X13_Week_Price__c
   ),
   (Subscription_Duration_Number__c * Weekly_Price__c  - IF(
                                                            NOT(ISNULL(Low_Start_Weekly_Price__c)),
                                                            Low_Start_Period__c * (Weekly_Price__c - Low_Start_Weekly_Price__c),
                                                            0
                                                           )
   )
   )*MAX(Quantity__c, 1)
</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total price for the subscription.</inlineHelpText>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_of_All_Payments__c</fullName>
        <formula>Astra_Migration_Balance__c + Sum_of_Payments__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Net sum of all payments by the subscriber</inlineHelpText>
        <label>Total of All Payments</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Value_of_Vouchers_in_Hand__c</fullName>
        <description>Value of vouchers that the subscriber has in hand for this subscription (Deferred Asset value)</description>
        <formula>CASE(Subscription_Status__c, 
        &quot;Pending&quot;, 
	IF(ISBLANK(Previous_Subscription__c), 
		IF(TODAY() &gt; ( Start_Date__c - 9), 
			IF(In_Low_Start_Period__c, Low_Start_Weekly_Price__c ,Weekly_Price__c)* Voucher_Pack_Duration__c * MAX(Quantity__c, 1),
				0
		), 
		IF(TODAY()&gt;(Start_Date__c - 23),
			Weekly_Price__c * Voucher_Pack_Duration__c * MAX(Quantity__c, 1),
			0 
		) 
	) 
	, 
	DA_Standard_Voucher_Extraction__c - Voucher_Amount_Used__c + Asset_Calc__c 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Value of vouchers that the subscriber has in hand for this subscription (Deferred Asset value)</inlineHelpText>
        <label>Value of Vouchers in Hand</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Voucher_Adjustment_Reason__c</fullName>
        <description>8/6/09 SB: Increased length from 33 to 52 - prevent truncation of last reason in line with new Phase 2a functionality for voucher writebacks</description>
        <label>Last Voucher Adjustment Reason</label>
        <length>52</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Voucher_Adjustment_Start_Date__c</fullName>
        <description>Copy of the subscriptions associated Voucher Adjustment  Start_Date__c Field populated by Apex code.</description>
        <label>Voucher Adjustment Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Voucher_Amount_Used__c</fullName>
        <description>SB 26/8:
OLD: IF(Payment_Details_Received__c = true, ((Current_Week_Position__c) * Weekly_Price__c) - (Current_Week_Position__c * (Discount__c / Subscription_Duration_Number__c)), 0)</description>
        <formula>IF(Payment_Details_Received__c, Current_Week_Position__c * Weekly_Price__c - 
 IF(RecordType.Name = &quot;Low Start&quot;,
   MIN(Low_Start_Period__c, Current_Week_Position__c) * (Weekly_Price__c - Low_Start_Weekly_Price__c),
   0
 )
,
0
) * MAX(Quantity__c, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Voucher Amount Used</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Voucher_Extraction_DD_Date__c</fullName>
        <formula>IF( if_first_voucher_pack__c = &apos;Y&apos;,  if_DD_First_Collection_Date__c ,  IF_DD_Ongoing_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Voucher_Extraction_DD_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Voucher_Offset__c</fullName>
        <label>Voucher Offset</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Voucher_Pack_1_End_Date__c</fullName>
        <description>This field displays the end date of Voucher Pack 1. This field is blank if the subscription is of type 104 or 156.</description>
        <formula>IF( OR( ISPICKVAL(Subscription_Duration_Picklist__c,&quot;104&quot;),
ISPICKVAL(Subscription_Duration_Picklist__c,&quot;156&quot;), (Start_Date__c + ((Voucher_Pack_Duration__c*7)-1)&gt;  End_Date__c)),NULL,Start_Date__c + Nullvalue(Voucher_Offset__c,0) + ((Voucher_Pack_Duration__c*7)-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field displays the end date of Voucher Pack 1. This field is blank if the subscription is of type 104 or 156.</inlineHelpText>
        <label>Voucher Pack 1 End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Voucher_Pack_1_Start_Date__c</fullName>
        <formula>IF( OR( ISPICKVAL(Subscription_Duration_Picklist__c,&quot;104&quot;),
ISPICKVAL(Subscription_Duration_Picklist__c,&quot;156&quot;), (Start_Date__c &gt;  End_Date__c)),NULL,(Start_Date__c + Nullvalue(Voucher_Offset__c,0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Voucher Pack 1 Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Voucher_Pack_2_End_Date__c</fullName>
        <formula>IF( OR( ISPICKVAL(Subscription_Duration_Picklist__c,&quot;104&quot;),
ISPICKVAL(Subscription_Duration_Picklist__c,&quot;156&quot;), (Start_Date__c + (((Voucher_Pack_Duration__c*2)*7)-1) &gt;  End_Date__c)),NULL,Start_Date__c + Nullvalue(Voucher_Offset__c,0) + (((Voucher_Pack_Duration__c*2)*7)-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Voucher Pack 2 End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Voucher_Pack_2_Start_Date__c</fullName>
        <formula>IF( OR( ISPICKVAL(Subscription_Duration_Picklist__c,&quot;104&quot;),
ISPICKVAL(Subscription_Duration_Picklist__c,&quot;156&quot;), (Start_Date__c + (Voucher_Pack_Duration__c*7) &gt;  End_Date__c)),NULL,Start_Date__c + Nullvalue(Voucher_Offset__c,0) + (Voucher_Pack_Duration__c*7))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Voucher Pack 2 Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Voucher_Pack_3_End_Date__c</fullName>
        <formula>IF( OR( ISPICKVAL(Subscription_Duration_Picklist__c,&quot;104&quot;),
ISPICKVAL(Subscription_Duration_Picklist__c,&quot;156&quot;), (Start_Date__c + (((Voucher_Pack_Duration__c*3)*7)-1) &gt;  End_Date__c)),NULL,Start_Date__c + Nullvalue(Voucher_Offset__c,0) + (((Voucher_Pack_Duration__c*3)*7)-1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Voucher Pack 3 End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Voucher_Pack_3_Start_Date__c</fullName>
        <formula>IF( OR( ISPICKVAL(Subscription_Duration_Picklist__c,&quot;104&quot;),
ISPICKVAL(Subscription_Duration_Picklist__c,&quot;156&quot;), (Start_Date__c + ((Voucher_Pack_Duration__c*2)*7) &gt;  End_Date__c)),NULL,Start_Date__c + Nullvalue(Voucher_Offset__c,0) + ((Voucher_Pack_Duration__c*2)*7))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Voucher Pack 3 Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Voucher_Pack_Duration__c</fullName>
        <defaultValue>13</defaultValue>
        <description>Used to record if the subscription has 12 or 13 week voucher packs</description>
        <label>Voucher Pack Duration</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Voucher_Resend_Date__c</fullName>
        <label>Voucher Resend Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Voucher_Resend_Extraction_Date_Calc__c</fullName>
        <formula>If (MOD(today() - DATE(1900, 1, 7), 7) =1, today()+1,If (MOD(today() - DATE(1900, 1, 8), 7) =1, today(),If (MOD( today() - DATE(1900, 1, 9), 7) =1, today()+6,If (MOD(today() - DATE(1900, 1, 10), 7) =1, today()+5,If (MOD(today() - DATE(1900, 1, 11), 7) =1, today()+4,If (MOD( today() - DATE(1900, 1, 12), 7) =1, today()+3,If (MOD( today() - DATE(1900, 1, 13), 7) =1, today()+2,NULL)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Voucher Resend Extraction Date Calc</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Voucher_Resend_Extraction_Date__c</fullName>
        <label>Voucher Resend Extraction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Voucher_Resend_Number__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Voucher Resend Number</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vouchers_Valid_Until__c</fullName>
        <formula>(Next_Voucher_Batch__c + (Voucher_Pack_Duration__c * 7) - 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vouchers Valid Until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WebsiteLastAccessed__c</fullName>
        <label>Website Last Accessed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WeeklyDigitalPrice__c</fullName>
        <label>Weekly Digital Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WeeklyDigitalVAT__c</fullName>
        <label>Weekly Digital VAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WeeklyPrintPrice__c</fullName>
        <label>Weekly Print Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WeeklySmartphonePrice__c</fullName>
        <label>Weekly Smartphone Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WeeklyTabletPrice__c</fullName>
        <label>Weekly Tablet Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WeeklyWebsitePrice__c</fullName>
        <label>Weekly Website Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Weekly_Price__c</fullName>
        <label>Weekly Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>What_Read__c</fullName>
        <label>What&apos;s Read</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Cancellation_Reason__c</controllingField>
            <valueSetDefinition>
                <value>
                <fullName>Weekday</fullName>
                </value>
                <value>
                <fullName>Saturday</fullName>
                </value>
                <value>
                <fullName>Sunday</fullName>
                </value>
                <value>
                <fullName>Supplement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Who__c</fullName>
        <label>Who</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Cancellation_Reason__c</controllingField>
            <valueSetDefinition>
                <value>
                <fullName>Broadsheet</fullName>
                </value>
                <value>
                <fullName>Tabloid</fullName>
                </value>
                <value>
                <fullName>Digital</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Within_14_Day_Reason__c</fullName>
        <label>Within 14 Day Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Cancellation_Reason__c</controllingField>
            <valueSetDefinition>
                <value>
                <fullName>Content</fullName>
                </value>
                <value>
                <fullName>Style - Written</fullName>
                </value>
                <value>
                <fullName>Style - Layout</fullName>
                </value>
                <value>
                <fullName>Move to Digital Content</fullName>
                </value>
                <value>
                <fullName>Competitor Offer</fullName>
                </value>
                <value>
                <fullName>Readership Style (Day Reader)</fullName>
                </value>
                <value>
                <fullName>Duration of Subscription</fullName>
                </value>
                <value>
                <fullName>Review of Personal Finances</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>if_11_Week_Renewal_Date_Hidden__c</fullName>
        <description>Interface field for New Logic Export. Calculates the date of the Saturday 11 weeks before previous subscription expiry.</description>
        <formula>IF(
  Previous_Subscription__r.Subscription_Duration_Number__c == 13,
  Null, 
  Start_Date__c -((11*7)+2)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>R01 Extraction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>if_2_Week_Renewal_Date_Hidden__c</fullName>
        <description>Interface field for New Logic Export. Calculates the date of the Saturday 2 weeks before previous subscription expiry.</description>
        <formula>Start_Date__c - ((2*7)+2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IF 2 Week Renewal Date Hidden</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>if_4_Week_DD_Increase_Extraction_Date__c</fullName>
        <description>Interface field for New Logic Export. Calculates the date of the Saturday 4 weeks before the first DD payment date of a new subscription to notify of DD price increase.</description>
        <formula>IF(MOD(IF_Next_DD_Payment_Date__c - DATE(1900, 1, 7), 7) = 1, IF_Next_DD_Payment_Date__c - 30, 
IF(MOD(IF_Next_DD_Payment_Date__c - DATE(1900, 1, 7), 7) = 2, IF_Next_DD_Payment_Date__c - 31, 
IF(MOD(IF_Next_DD_Payment_Date__c - DATE(1900, 1, 7), 7) = 3, IF_Next_DD_Payment_Date__c - 32, 
IF(MOD(IF_Next_DD_Payment_Date__c - DATE(1900, 1, 7), 7) = 4, IF_Next_DD_Payment_Date__c - 33, 
IF(MOD(IF_Next_DD_Payment_Date__c - DATE(1900, 1, 7), 7) = 5, IF_Next_DD_Payment_Date__c - 34, 
IF(MOD(IF_Next_DD_Payment_Date__c - DATE(1900, 1, 7), 7) = 6, IF_Next_DD_Payment_Date__c - 28, 
IF_Next_DD_Payment_Date__c - 29))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IF 4 Week DD Increase Extraction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>if_7_Week_Renewal_Date_Hidden__c</fullName>
        <description>Interface field for New Logic Export. Calculates the date of the Saturday 7 weeks before previous subscription expiry.</description>
        <formula>Start_Date__c - ((7*7)+2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IF 7 Week Renewal Date Hidden</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>if_DD_Collection_Frequency__c</fullName>
        <description>Copy of the DebitStream object field for collection period. Used in New Logic interface.</description>
        <label>IF DD Collection Period Hidden</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>if_DD_First_Collection_Date__c</fullName>
        <description>Copy of the DebitStream object field for first collection date. Used in New Logic interface.</description>
        <label>IF DD First Collection Date Hidden</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>if_Is_Renewal_Binary__c</fullName>
        <formula>If(LEN( Previous_Subscription__c)=0, 0, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IF Is Renewal Binary Hidden</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>